--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../Menu/adminmenu.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../Menu/adminmenu.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.adminconsole.AdminScreenMenuController">
     <top>
         <HBox prefHeight="65.0" prefWidth="1280.0" styleClass="top-container" BorderPane.alignment="CENTER">
             <children>
@@ -40,7 +40,7 @@
                                 <Insets left="15.0" top="7.0" />
                             </HBox.margin>
                         </ImageView>
-                        <TextField fx:id="searchField" prefHeight="40.0" prefWidth="498.0" promptText="Search:" styleClass="search-box">
+                        <TextField fx:id="searchbar"  prefHeight="40.0" prefWidth="498.0" promptText="Search:" styleClass="search-box">
                             <font>
                                 <Font size="14.0" />
                             </font>
@@ -56,12 +56,12 @@
                 <Region HBox.hgrow="ALWAYS" />
                 <HBox prefWidth="200.0">
                     <children>
-                        <Label text="27-09-2024" textAlignment="CENTER">
+                        <Label fx:id="date" text="27-09-2024" textAlignment="CENTER">
                             <padding>
                                 <Insets left="30.0" top="25.0" />
                             </padding>
                         </Label>
-                        <Label text="10:42 AM">
+                        <Label fx:id="time" text="10:42 AM">
                             <padding>
                                 <Insets left="20.0" top="25.0" />
                             </padding>
@@ -81,7 +81,7 @@
                                 <Image url="@../../../images/account_user_icon.png" />
                             </image>
                         </ImageView>
-                        <Text layoutX="44.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-label" text="Hello, Admin" AnchorPane.leftAnchor="54.0" AnchorPane.topAnchor="90.0" />
+                        <Text fx:id="greeting" layoutX="44.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-label" text="Hello, Admin" AnchorPane.leftAnchor="54.0" AnchorPane.topAnchor="90.0" />
                         <Text fill="#757575" layoutX="81.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="message-text" text="Welcome," AnchorPane.leftAnchor="81.0" AnchorPane.topAnchor="130.0" />
                         <Text fill="#757575" layoutX="66.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="message-text" text="Have a nice day" AnchorPane.topAnchor="145.0" />
                     </children>
@@ -89,7 +89,7 @@
                 <Line endX="85.0" layoutX="116.0" layoutY="202.0" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" styleClass="line" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" />
                 <VBox layoutX="-1.0" layoutY="215.0" prefHeight="200.0" prefWidth="210.0" AnchorPane.leftAnchor="-1.0" AnchorPane.topAnchor="215.0">
                     <children>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Home">
+                        <Button fx:id="homebutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Home" onAction="#onHomeButtonClick">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -101,7 +101,7 @@
                                 <Insets />
                             </VBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Users">
+                        <Button fx:id="usersbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Users" onAction="#onUsersButtonClick">
                             <graphic>
                                 <ImageView fitHeight="19.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -110,7 +110,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" styleClass="menu-button" text="Menu">
+                        <Button fx:id="menubutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" styleClass="menu-button" text="Menu" onAction="#onMenuButtonClick">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -119,7 +119,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Stock">
+                        <Button fx:id="stockbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Stock" onAction="#onStockButtonClick">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -128,7 +128,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Analytics">
+                        <Button fx:id="analyticsbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Analytics" onAction="#onAnalyticsButtonClick">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -141,7 +141,7 @@
                 </VBox>
                 <VBox layoutX="66.0" layoutY="569.0" prefHeight="50.0" prefWidth="210.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                     <children>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="230.0" styleClass="logout-button" text="Logout">
+                        <Button fx:id="logoutbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="230.0" styleClass="logout-button" text="Logout" onAction="#onLogoutButtonClick">
                             <graphic>
                                 <ImageView fitHeight="22.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -235,7 +235,7 @@
                         </AnchorPane>
                      </children>
                   </HBox>
-                  <ListView style="-fx-border-color: white;" />
+                  <ListView fx:id="menuitemlist" style="-fx-border-color: white;" />
                </children>
                <padding>
                   <Insets top="10.0" />
@@ -256,8 +256,8 @@
                     <bottom>
                         <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="30.0" BorderPane.alignment="CENTER">
                             <children>
-                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Edit Item" />
-                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Remove Item" />
+                                <Button fx:id="editbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Edit Menu Item" />
+                                <Button fx:id="removebutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Remove Menu Item" />
                             </children>
                         </HBox>
                     </bottom>
@@ -266,7 +266,7 @@
                      <center>
                               <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
                            <children>
-                              <Label text="Item Infomation">
+                              <Label text="Menu Item Infomation">
                                  <padding>
                                     <Insets left="20.0" top="20.0" />
                                  </padding>
@@ -275,11 +275,13 @@
                                  </font>
                               </Label>
                               <HBox prefHeight="0.0" prefWidth="0.0" style="-fx-border-color: #4a85f6;" />
-                              <TextField prefHeight="30.0" promptText="Item Name *" />
-                              <TextField layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Price *" />
-                              <ChoiceBox prefWidth="150.0" />
-                              <ChoiceBox prefWidth="150.0" />
-                              <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Item Description *" />
+                              <TextField fx:id="menuitemnamefield" prefHeight="30.0" promptText="Menu Item Name *" />
+                              <TextField fx:id="pricefield" layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Price *" />
+                              <Label text="Item Type:" />
+                              <ChoiceBox fx:id="itemtypefield" prefWidth="150.0" />
+                              <Label text="Dietary Requirements" />
+                              <ChoiceBox fx:id="dietaryrequirementsfield" prefWidth="150.0" />
+                              <TextArea fx:id="itemdescriptionfield" prefHeight="200.0" prefWidth="200.0" promptText="Item Description *" />
                            </children>
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -289,9 +291,9 @@
                      <bottom>
                         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                           <buttons>
-                            <Button mnemonicParsing="false" text="Submit" />
-                              <Button layoutX="196.0" layoutY="15.0" mnemonicParsing="false" text="Add Item +" />
-                              <Button layoutX="196.0" layoutY="15.0" mnemonicParsing="false" text="Cancel" />
+                            <Button fx:id="submitbutton" mnemonicParsing="false" text="Submit" />
+                              <Button fx:id="addmenuitembutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" text="Add Item +" />
+                              <Button fx:id="cancelbutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" text="Cancel" />
                           </buttons>
                            <opaqueInsets>
                               <Insets />
