--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/adminstock.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/adminstock.css
@@ -22,7 +22,7 @@
 .header-label {
     -fx-text-fill: black;
     -fx-font-size: 18px;
-    -fx-font-weight: semibold;
+    -fx-font-weight: bold;
     -fx-font-family: "Arial", sans-serif;
 }
 
