--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
@@ -40,7 +40,7 @@
                                 <Insets left="15.0" top="7.0" />
                             </HBox.margin>
                         </ImageView>
-                        <TextField fx:id="searchbar"  prefHeight="40.0" prefWidth="498.0" promptText="Search:" styleClass="search-box">
+                        <TextField fx:id="searchbar" prefHeight="40.0" prefWidth="498.0" promptText="Search:" styleClass="search-box">
                             <font>
                                 <Font size="14.0" />
                             </font>
@@ -89,7 +89,7 @@
                 <Line endX="85.0" layoutX="116.0" layoutY="202.0" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" styleClass="line" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" />
                 <VBox layoutX="-1.0" layoutY="215.0" prefHeight="200.0" prefWidth="210.0" AnchorPane.leftAnchor="-1.0" AnchorPane.topAnchor="215.0">
                     <children>
-                        <Button fx:id="homebutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Home" onAction="#onHomeButtonClick">
+                        <Button fx:id="homebutton" mnemonicParsing="false" onAction="#onHomeButtonClick" prefHeight="40.0" prefWidth="210.0" text="Home">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -101,7 +101,7 @@
                                 <Insets />
                             </VBox.margin>
                         </Button>
-                        <Button fx:id="usersbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Users" onAction="#onUsersButtonClick">
+                        <Button fx:id="usersbutton" mnemonicParsing="false" onAction="#onUsersButtonClick" prefHeight="40.0" prefWidth="210.0" text="Users">
                             <graphic>
                                 <ImageView fitHeight="19.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -110,7 +110,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button fx:id="menubutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" styleClass="menu-button" text="Menu" onAction="#onMenuButtonClick">
+                        <Button fx:id="menubutton" mnemonicParsing="false" onAction="#onMenuButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="menu-button" text="Menu">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -119,7 +119,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button fx:id="stockbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Stock" onAction="#onStockButtonClick">
+                        <Button fx:id="stockbutton" mnemonicParsing="false" onAction="#onStockButtonClick" prefHeight="40.0" prefWidth="210.0" text="Stock">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -128,7 +128,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button fx:id="analyticsbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Analytics" onAction="#onAnalyticsButtonClick">
+                        <Button fx:id="analyticsbutton" mnemonicParsing="false" onAction="#onAnalyticsButtonClick" prefHeight="40.0" prefWidth="210.0" text="Analytics">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -141,7 +141,7 @@
                 </VBox>
                 <VBox layoutX="66.0" layoutY="569.0" prefHeight="50.0" prefWidth="210.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                     <children>
-                        <Button fx:id="logoutbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="230.0" styleClass="logout-button" text="Logout" onAction="#onLogoutButtonClick">
+                        <Button fx:id="logoutbutton" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefHeight="40.0" prefWidth="230.0" styleClass="logout-button" text="Logout">
                             <graphic>
                                 <ImageView fitHeight="22.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -175,7 +175,7 @@
                      <children>
                         <AnchorPane prefHeight="50.0" prefWidth="212.0">
                            <children>
-                              <Label layoutX="23.0" layoutY="12.0" text="Item Name" textFill="#8f9bb3">
+                              <Label layoutX="47.0" layoutY="5.0" text="Item Name" textFill="#8f9bb3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -184,7 +184,7 @@
                         </AnchorPane>
                         <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Label layoutX="62.0" layoutY="12.0" text="Price" textFill="#8f9bb3">
+                              <Label layoutX="62.0" layoutY="4.0" text="Price" textFill="#8f9bb3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -193,7 +193,7 @@
                         </AnchorPane>
                         <AnchorPane layoutX="210.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Label layoutX="63.0" layoutY="12.0" text="Type" textFill="#8f9bb3">
+                              <Label layoutX="57.0" layoutY="4.0" text="Type" textFill="#8f9bb3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -202,7 +202,7 @@
                         </AnchorPane>
                         <AnchorPane layoutX="396.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Label layoutX="52.0" layoutY="12.0" text="Dietary" textFill="#8f9bb3">
+                              <Label layoutX="44.0" layoutY="4.0" text="Dietary" textFill="#8f9bb3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -211,31 +211,7 @@
                         </AnchorPane>
                      </children>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="56.0" prefHeight="50.0" prefWidth="200.0">
-                     <children>
-                        <AnchorPane prefHeight="50.0" prefWidth="212.0">
-                           <children>
-                              <Label contentDisplay="BOTTOM" layoutX="71.0" layoutY="16.0" text="Name" />
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
-                           <children>
-                              <Label layoutX="68.0" layoutY="16.0" text="price" />
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane layoutX="210.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
-                           <children>
-                              <Label layoutX="70.0" layoutY="16.0" text="type" />
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane layoutX="422.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
-                           <children>
-                              <Label layoutX="62.0" layoutY="16.0" text="dietary" />
-                           </children>
-                        </AnchorPane>
-                     </children>
-                  </HBox>
-                  <ListView fx:id="menuitemlist" style="-fx-border-color: white;" />
+                  <ListView fx:id="menuitemlist" prefHeight="1000.0" style="-fx-border-color: white;" />
                </children>
                <padding>
                   <Insets top="10.0" />
@@ -256,8 +232,8 @@
                     <bottom>
                         <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="30.0" BorderPane.alignment="CENTER">
                             <children>
-                                <Button fx:id="editbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Edit Menu Item" />
-                                <Button fx:id="removebutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Remove Menu Item" />
+                                <Button fx:id="editbutton" mnemonicParsing="false" onAction="#onEditButtonClick" prefHeight="40.0" prefWidth="150.0" text="Edit Menu Item" />
+                                <Button fx:id="removebutton" mnemonicParsing="false" onAction="#onRemoveButtonClick" prefHeight="40.0" prefWidth="150.0" text="Remove Menu Item" />
                             </children>
                         </HBox>
                     </bottom>
@@ -291,9 +267,9 @@
                      <bottom>
                         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                           <buttons>
-                            <Button fx:id="submitbutton" mnemonicParsing="false" text="Submit" />
-                              <Button fx:id="addmenuitembutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" text="Add Item +" />
-                              <Button fx:id="cancelbutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" text="Cancel" />
+                            <Button fx:id="submitbutton" mnemonicParsing="false" onAction="#onSubmitButtonClick" text="Submit" />
+                              <Button fx:id="addmenuitembutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onAddMenuItemButtonClick" text="Add Item +" />
+                              <Button fx:id="cancelbutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onCancelButtonClick" text="Cancel" />
                           </buttons>
                            <opaqueInsets>
                               <Insets />
