--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
@@ -88,7 +88,7 @@
                 <Line endX="85.0" layoutX="116.0" layoutY="202.0" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" styleClass="line" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" />
                 <VBox layoutX="-1.0" layoutY="215.0" prefHeight="200.0" prefWidth="210.0" AnchorPane.leftAnchor="-1.0" AnchorPane.topAnchor="215.0">
                     <children>
-                        <Button fx:id="homebutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Home" onAction="#onHomeButtonClick">
+                        <Button fx:id="homebutton" mnemonicParsing="false" onAction="#onHomeButtonClick" prefHeight="40.0" prefWidth="210.0" text="Home">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -100,7 +100,7 @@
                                 <Insets />
                             </VBox.margin>
                         </Button>
-                        <Button fx:id="usersbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Users" onAction="#onUsersButtonClick">
+                        <Button fx:id="usersbutton" mnemonicParsing="false" onAction="#onUsersButtonClick" prefHeight="40.0" prefWidth="210.0" text="Users">
                             <graphic>
                                 <ImageView fitHeight="19.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -109,7 +109,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button fx:id="menubutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Menu" onAction="#onMenuButtonClick">
+                        <Button fx:id="menubutton" mnemonicParsing="false" onAction="#onMenuButtonClick" prefHeight="40.0" prefWidth="210.0" text="Menu">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -118,7 +118,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button fx:id="stockbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" styleClass="stock-button" text="Stock" onAction="#onStockButtonClick">
+                        <Button fx:id="stockbutton" mnemonicParsing="false" onAction="#onStockButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="stock-button" text="Stock">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -127,7 +127,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button fx:id="analyticsbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Analytics" onAction="#onAnalyticsButtonClick">
+                        <Button fx:id="analyticsbutton" mnemonicParsing="false" onAction="#onAnalyticsButtonClick" prefHeight="40.0" prefWidth="210.0" text="Analytics">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -140,7 +140,7 @@
                 </VBox>
                 <VBox layoutX="66.0" layoutY="569.0" prefHeight="50.0" prefWidth="210.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                     <children>
-                        <Button fx:id="logoutbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="230.0" styleClass="logout-button" text="Logout" onAction="#onLogoutButtonClick">
+                        <Button fx:id="logoutbutton" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefHeight="40.0" prefWidth="230.0" styleClass="logout-button" text="Logout">
                             <graphic>
                                 <ImageView fitHeight="22.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -174,7 +174,7 @@
                      <children>
                         <AnchorPane prefHeight="50.0" prefWidth="212.0">
                            <children>
-                              <Label layoutX="41.0" layoutY="12.0" text="Item Name" textFill="#8f9bb3">
+                              <Label layoutX="41.0" layoutY="6.0" text="Item Name" textFill="#8f9bb3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -183,7 +183,7 @@
                         </AnchorPane>
                         <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Label layoutX="13.0" layoutY="12.0" text="Desired Quantity" textFill="#8f9bb3">
+                              <Label layoutX="12.0" layoutY="6.0" text="Desired Quantity" textFill="#8f9bb3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -192,7 +192,7 @@
                         </AnchorPane>
                         <AnchorPane layoutX="210.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Label layoutX="22.0" layoutY="12.0" text="Actual Quanity" textFill="#8f9bb3">
+                              <Label layoutX="22.0" layoutY="6.0" text="Actual Quanity" textFill="#8f9bb3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -201,7 +201,7 @@
                         </AnchorPane>
                         <AnchorPane layoutX="396.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Label layoutX="62.0" layoutY="12.0" text="Price" textFill="#8f9bb3">
+                              <Label layoutX="62.0" layoutY="6.0" text="Price" textFill="#8f9bb3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -210,31 +210,7 @@
                         </AnchorPane>
                      </children>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="56.0" prefHeight="50.0" prefWidth="200.0">
-                     <children>
-                        <AnchorPane prefHeight="50.0" prefWidth="212.0">
-                           <children>
-                              <Label contentDisplay="BOTTOM" layoutX="71.0" layoutY="16.0" text="Name" />
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
-                           <children>
-                              <Label layoutX="54.0" layoutY="16.0" text="Desired #" />
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane layoutX="210.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
-                           <children>
-                              <Label layoutX="58.0" layoutY="16.0" text="Actual #" />
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane layoutX="422.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
-                           <children>
-                              <Label layoutX="52.0" layoutY="16.0" text="Item Price" />
-                           </children>
-                        </AnchorPane>
-                     </children>
-                  </HBox>
-                  <ListView fx:id="itemlist" style="-fx-border-color: white;" />
+                  <ListView fx:id="itemlist" prefHeight="1000.0" style="-fx-border-color: white;" />
                </children>
                <padding>
                   <Insets top="10.0" />
@@ -255,8 +231,8 @@
                     <bottom>
                         <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="30.0" BorderPane.alignment="CENTER">
                             <children>
-                                <Button fx:id="editbutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Edit Item" />
-                                <Button fx:id="removebutton" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Remove Item" />
+                                <Button fx:id="editbutton" mnemonicParsing="false" onAction="#onEditButtonClick" prefHeight="40.0" prefWidth="150.0" text="Edit Item" />
+                                <Button fx:id="removebutton" mnemonicParsing="false" onAction="#onRemoveButtonClick" prefHeight="40.0" prefWidth="150.0" text="Remove Item" />
                             </children>
                         </HBox>
                     </bottom>
@@ -289,9 +265,9 @@
                      <bottom>
                         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                           <buttons>
-                            <Button fx:id="submitbutton" mnemonicParsing="false" text="Submit" />
-                              <Button fx:id="additembutton" layoutX="237.0" layoutY="15.0" mnemonicParsing="false" text="Add Item +" />
-                              <Button fx:id="cancelbutton" layoutX="237.0" layoutY="15.0" mnemonicParsing="false" text="Cancel" />
+                            <Button fx:id="submitbutton" mnemonicParsing="false" onAction="#onSubmitButtonClick" text="Submit" />
+                              <Button fx:id="additembutton" layoutX="237.0" layoutY="15.0" mnemonicParsing="false" onAction="#onAddItemButtonClick" text="Add Item +" />
+                              <Button fx:id="cancelbutton" layoutX="237.0" layoutY="15.0" mnemonicParsing="false" onAction="#onCancelButtonClick" text="Cancel" />
                           </buttons>
                            <opaqueInsets>
                               <Insets />
